Remove extra fields from doc metadata
